<resources>
    <string name="app_name">GitRoom</string>
    <string name="title_user">User</string>
    <string name="title_favourite">Favourite</string>
    <string name="username">Username</string>
    <string name="country">Country</string>
    <string name="company">Company</string>
    <string name="realname">RealName</string>
    <string name="repository">repository</string>
    <string name="follower">follower</string>
    <string name="following">following</string>
    <string name="id">id</string>
    <string name="url">url</string>

    <string name="pushed_date">Last Pushed Date:</string>
    <string name="title_activity_settings">Setting</string>

    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="alarm">Alarm</string>
    <string name="off">Alarm Off</string>
    <string name="on">Alarm Set Up Done</string>
    <string name="set_alarm">Set Alarm</string>

    <string name="LANGUAGE">LANGUAGE</string>
    <string name="ALARM">ALARM</string>

    <string name="appwidget_text">Favourite Side</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_data">No Data</string>

</resources>