<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language">
        <Preference
            android:id="@+id/change_language"
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_language_24"
            android:key="@string/LANGUAGE"
            android:title="@string/change_language" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/alarm">

        <SwitchPreference
            android:id="@+id/alarm"
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_access_alarm_24"
            android:key="@string/ALARM"
            android:summaryOff="@string/off"
            android:summaryOn="@string/on"
            android:title="@string/set_alarm" />

    </PreferenceCategory>

</PreferenceScreen>